2004-02-26  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added drivel.

2004-02-24  Vincent van Adrighem  <adrighem@gnome.org>

	* translation-status.xml: removed gnome-vfs-extras
	because the module is dead.

2004-02-20  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Dumped proposed. Moved
	gnome-system-tools to fifth-toe.

2004-02-19  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added straw.

2004-02-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-sharing.

2004-02-11  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Move evolution-data-server to extras.

2004-02-02  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added monkey-bubble.

2004-02-01  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: GSwitchIt is integrated into g-c-c and
	gnome-applets.

2004-02-01  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Move gal and gtkhtml into extras as well.

2004-01-31  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: rhythmbox and evolution into extras
	(they were withdrawn).

2004-01-28  Carlos Perelló Marín <carlos@gnome.org>

	* translation-status.xml: Acme is now inside gnome-control-center

2004-01-24  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Try to reflect the new modules decision
	for GNOME 2.6.

2004-01-20  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Changed POT file for gtk+-properties
	back to gtk20.pot.

2004-01-19  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Corrected pot file name for
	gtk+-properties.

2004-01-18  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed last few bits of 1.4 translation
	status pages.

2004-01-18  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added muine and gtk+-properties.

2004-01-17  Christian Rose  <menthos@menthos.com>
