@@ -73,9 +73,6 @@
   <module name="evolution">
     <version name="evolution-1-4-branch" id="evolution-1-4-branch" path="evolution" server="CVS-GNOME" />
   </module>
-  <module name="evolution-groupwise">
-    <version name="evolution-groupwise-HEAD" id="HEAD" path="evolution-groupwise" server="CVS-GNOME" />
-  </module>
   <module name="file-roller">
     <version name="file-roller-HEAD" id="HEAD" path="file-roller" server="CVS-GNOME" />
   </module>
