@@ -376,17 +376,6 @@
       </component>
     </version>
   </module>
-  <module name="evolution-groupwise">
-    <version release="gnome-2.6">
-      <component name="evolution-groupwise" dir="evolution-groupwise" group="extras">
-	<podir dir="po"/>
-	<potname name="evolution-groupwise-1.0.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
-  </module>
   <module name="file-roller">
     <version release="gnome-2.4">
       <component name="file-roller" dir="file-roller" group="desktop">
