@@ -1,3 +1,7 @@
+2004-03-04  Abel Cheung  <maddog@linux.org.hk>
+
+	* translation-status.xml: Removed evolution-groupwise, dead.
+
 2004-02-26  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Added drivel.
